Fix some issues to support trusty in tracis CI